--- a/wwwroot/css/details.css
+++ b/wwwroot/css/details.css
@@ -438,7 +438,9 @@
     z-index: 1001;
 }
 
-.modal-content {
+div#interestModal .modal-content,
+div#offerModal .modal-content,
+div#testDriveModal .modal-content {
     border-radius: 12px;
     max-width: 100%;
     width: 100%;
@@ -725,7 +727,6 @@ a.breadcrumb-link, li.breadcrumb-current {
     border: none;
     border-radius: 16px;
     padding: 16px 20px;
-    margin-bottom: 24px;
     font-weight: 600;
     backdrop-filter: blur(10px);
 }
@@ -818,7 +819,7 @@ a.breadcrumb-link, li.breadcrumb-current {
 }
 
 /* =================================
-   SECTIONS SPÉCIALES DANS LES MODALS
+   SECTIONS SPÉCIALES DANS LES MODALS   
    ================================= */
 
 /* Section reprise - spécifique au modal d'offre */
@@ -857,8 +858,6 @@ a.breadcrumb-link, li.breadcrumb-current {
    ================================= */
 
 .contact-form-check {
-    padding-left: 0;
-    margin-bottom: 12px;
     display: flex;
     align-items: center;
     gap: 12px;
@@ -936,18 +935,24 @@ a.breadcrumb-link, li.breadcrumb-current {
     backdrop-filter: blur(10px);
 }
 
-div#interestModal .modal-lg {
+div#interestModal .modal-lg, div#offerModal .modal-lg, div#testDriveModal .modal-lg {
     top: 3%;
     position: relative;
 }
 
-    .contact-btn-cancel:hover {
-        background: rgba(243, 244, 246, 0.9);
-        color: #4b5563;
-        border-color: #d1d5db;
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
+div#interestModal .modal-body,
+div#interestModal .modal-body,
+div#interestModal .modal-body{
+    gap: 0px;
+}
+
+.contact-btn-cancel:hover {
+    background: rgba(243, 244, 246, 0.9);
+    color: #4b5563;
+    border-color: #d1d5db;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
 
 /* Bouton Principal (Bleu) pour modals de contact */
 .contact-btn-primary {
@@ -1010,7 +1015,8 @@ div#interestModal .modal-lg {
     .contact-form-row > * {
         padding-right: 12px;
         padding-left: 12px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
+        margin-top: 10px;
     }
 
 /* =================================
@@ -1222,4 +1228,8 @@ div#interestModal .modal-lg {
             transform: none;
         }
     }
+}
+
+div#successModal .modal-content {
+    width: 50%;
 }
